examples/compiler_errors/adversarial/type_and_effect_modules/TypeBroken.flx
module TypeBroken {
    fn bad() -> Unit {
        let value: Int = "oops"
    }
}
